src/css/styles.scss
@import '_variables.scss';
@import '_mixins.scss';

body {
  @include body-display;
}

h1 {
  align-self: center;
  color: white;
  font-family: "Sulphur Point", sans-serif;
  font-size: 50px;
  margin: 0%;
  padding: 0.5% 0.7% 0%;
  width: 70%;
}

h2 {
  color: $secondary-header-color;
  margin: 10px 0px 10px 0px;
}

h3 {
  color: $green-recipe-title;
  cursor: pointer;
  height: 17%;
  margin: 5px 5px 10px 0px;
  transition: .8s ease;
}

h4 {
  color: $green-recipe-title;
  background-color: $green-title-border;
  border-radius: 3px;
  margin: 10px 0px 0px 0px;
  padding: 1px 4px 1px 4px;
  width: max-content;
}


/* HEADER */
header {
  @include flex-center;
  grid-area: header;
  padding: 0%;
  width: $full;

    span {
      color: $green-title-border;
      font-weight: 400;
    }

    .header-apple-icon {
      height: 40px;
      margin-left: 5px;
      width: 35px;
    }

    #search {
      border-radius: 15px;
      border: 3px outset $green-title-border;
      box-shadow: 0px 0px 7px 0px #475d74;
      @include flex-center;
      flex-direction: row;
      font-family: $Quicksand;
      margin: 1.2% 0.5% 1.2% 0%;
      width: $full;
    }

    #search-input {
      background-color: #b6dcca;
      background: -webkit-gradient( linear,left top, left bottom, color-stop(0, rgb(255, 255, 255)), color-stop(1, rgb(225,225,225)));
      border-radius: 10px 0px 0px 10px;
      border: none;
      box-shadow: inset -3px -1px 20px 1px #5c7894;
      color: $blue-background;
      font-family: $Quicksand;
      font-size: 42px;
      height: $full;
      outline: none;
      padding: 0% 2% 0% 0%;
      text-align: right;
      transition: .8s ease;
      width: $full;

      &:hover,
      &:focus {
        box-shadow: inset 0px 0px 0px 0px white;
      }

      &:focus::placeholder {
        font-size: 0px;
        transition: .8s ease;
      }

      &::placeholder {
        color: $blue-background;
        font-size: 20px;
        text-align: right;
        text-shadow: none;
      }
    }

    .search-label {
      display: none;
    }

    .search-btn {
      border-left: 3px outset $green-title-border;
      border-radius: 0px 15px 15px 0px;
      padding: 1%;
    }

    .nav-btn {

      align-items: center;
      background: $blue-background no-repeat;
      border: none;
      cursor: pointer;
      @include flex-center;
      flex-direction: column;
      font-size: 0px;
      font-weight: 700;
      margin: 0%;
      outline: none;
      overflow: hidden;
      text-align: center;
      transition: .4s ease;
      width: 15%;

      &:hover {
        color: $green-title-border;
        font-size: 14px;
        text-shadow: 0px 2px 4px black;
        transition: .4s ease;
      }

      &img {
        max-height: 40px;
        max-width: 40px;
        padding: 2px 0px;
      }
    }
}

.search-label {
  display: none;
}

.search-btn {
  border-left: 3px outset $green-title-border;
  border-radius: 0px 15px 15px 0px;
  padding: 1%;
}

.nav-btn {
  align-items: center;
  background: $blue-background no-repeat;
  border: none;
  cursor: pointer;
  @include flex-center;
  flex-direction: column;
  font-size: 0px;
  font-weight: 700;
  margin: 0%;
  outline: none;
  overflow: hidden;
  text-align: center;
  transition: .4s ease;
  width: 15%;

  &:hover {
    color: $green-title-border;
    font-size: 14px;
    text-shadow: 0px 2px 4px black;
    transition: .4s ease;
  }

  &img {
    max-height: 40px;
    max-width: 40px;
    padding: 2px 0px;
  }

  .saved-ingredients-btn {
    border-left: 3px solid $green-title-border;
  }

  .ing-pan-btn {
    margin: 1% 0%;
    padding: 1px 6px 5px 0px;
  }
}

/* BANNER IMAGE*/
.banner-image {
  background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)),url("../images/green-apples.jpg");
  grid-area: image;
  height: 150px;
  overflow: hidden;
  width: $full;
}

.my-recipes-banner,
.welcome-msg {
  text-align: center;
  width: 95%;
}

.my-recipes-banner h1,
.welcome-msg h1 {
  color: white;
  width: $full;
}

.my-recipes-banner {
  display: none;
  margin-top: 25px;
}

.welcome-msg {
  margin-top: 50px;
}

/* FILTER SIDEBAR */
aside {
  background-color: white;
  @include flex-center;
  height: auto;
  text-align: center;

    .wrap {
      background-color: white;
      height: 100vh;
      padding: 10px;
      position: relative;
      width: 200px;
    }

    ul {
      list-style-type: none;
      text-align: left;
      padding-left: 35px;
    }

    li {
      margin: 2px;
    }
}

/* RECIPE CARD SECTION */
main {
  grid-area: main;
  @include flex-center;
  align-content: flex-start;
  flex-direction: row;
  flex-wrap: wrap;

  .recipe-card {
    background-color: white;
    border: 2px solid $green-title-border;
    border-radius: 7px;
    cursor: pointer;
    height: 270px;
    margin: 20px;
    padding: 15px;
    width: 250px;

    &:hover .card-photo-preview {
      opacity: 50%;
      transition: .8s ease;
    }

    &:hover .text {
      font-size: 20px;
      opacity: $full;
      transition: .5s ease;
      width: $full;
    }

    &:hover h3 {
      text-shadow: 0px 0px 4px $green-title-border;
      transition: .8s ease;
    }
  }

  .card-apple-icon {
    cursor: pointer;
    float: right;
    height: 50px;
    padding-bottom: 10px;
    width: 45px;
  }

  .card-photo-preview {
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 7px;
    cursor: pointer;
    height: 130px;
    transition: .8s ease;
    width: $full;
  }

  .card-photo-container {
    align-items: center;
    @include flex-center;
    height: 130px;
    position: relative;
  }

  .text {
    background: $green-recipe-title;
    color: white;
    font-weight: 700;
    font-size: 0px;
    opacity: 0%;
    padding: 0%;
    position: absolute;
    text-align: center;
    width: 0%;
    transition: .5s ease;
  }
}

/* BUTTONS */

.show-pantry-recipes-btn {
  margin-top: 10px;
  @include button-format();
}

.show-all-btn {
  height: 40px;
  margin-top: 20px;
  width: 200px;
  @include button-format();
}

.filter-btn {
  @include button-format();

  &:hover {
    background-color: $secondary-header-color;
  }
}




/* PANTRY LIST */
.drop-menu {
  align-items: center;
  background-color: #DAE4EE;
  display: none;
  height: 600px;
  margin-left: 81%;
  margin-top: 92px;
  overflow: scroll;
  padding: 12px;
  position: absolute;
  text-align: center;
  width: 250px;
  z-index: 3;

  &h2 {
    color: $green-recipe-title;
    margin: 0px;
  }
}

.pantry-list {
  color: #000000;
  padding-left: 15px;
  text-align: left;
}

/* RECIPE INSTRUCTIONS */
.recipe-instructions {
  background: white;
  border: 3px solid $green-title-border;
  border-radius: 10px;
  box-shadow: 1px 1px 115px black;
  display: none;
  height: 70%;
  margin: 0;
  overflow-x: scroll;
  padding: 1% 1% 1% 1%;
  position: fixed;
  right: 15%;
  top: 15%;
  width: 70%;
  z-index: 1000;

  &h4 {
    background: white;
    color: $green-recipe-title;
  }

  &p {
    margin-left: 2%;
  }

  &ol {
    margin-right: 2%;
  }
}

#exit-recipe-btn {
  background: white;
  border: 2px double $green-recipe-title;
  border-radius: 5px;
  color: $green-recipe-title;
  cursor: pointer;
  font-size: 20px;
  font-weight: 700;
  margin: -4% -3% 2% -1%;
  position: fixed;
  transition: .3s ease;

  &:hover {
    background: $green-title-border;
    transition: .3s ease;
  }
}

#recipe-title {
  background-repeat: no-repeat;
  background-size: cover;
  border-radius: 7px 7px 0px 0px;
  color: white;
  font-size: 30px;
  margin: 0;
  padding: 5%;
  text-align: center;
  text-shadow: 0px 0px 6px black;
}

#overlay {
  filter:alpha(opacity=50);
  background-color: $blue-background;
  height:$full;
  left:0;
  opacity:0.5;
  position:fixed;
  top:0;
  width:$full;
  z-index:100;
}

